# radius

./: .gitignore  CMakeLists.txt  CopyTextures.cmake  main.cpp  texture.cpp  texture.h  trig.cpp  trig.h
textures/: 1_checkerboard.ppm  1_checkerboard.txt  1_cobblestone_0.ppm  2_brick.ppm  2_brick.txt  3_window.ppm  3_window.txt  3_wood_0.ppm  4_door.ppm  4_door.txt  4_japanese_door.ppm  5_wood_1.ppm  99999_sky.ppm
